Updates comments and formatting of STLConverter